--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-booby
-docopt
-gevent
-pyquery
-simplekv
-requests
-cssselect
-SQLAlchemy
-python-dateutil
+SQLAlchemy==0.9.0
+booby==0.4.0
+cssselect==0.9.1
+docopt==0.6.1
+gevent==1.0
+pyquery==1.2.8
+python-dateutil==2.2
+requests==2.1.0
+simplekv==0.6
